# Nexus_c

./: .gitignore  CMakeLists.txt  Makefile  Nexus_c.lib  README.md
include/: Nexus_c.h  nx_audio.h  nx_inputs.h  nx_utils.h  nx_window.h
src/: Nexus_c.c  glad.c  nx_audio.c  nx_inputs.c  nx_utils.c  nx_utils.h  nx_window.c
src/glad/: glad.h
